# try-hylogen

./: .gitignore  README.md  bower.json  default.nix  package.json  stack.yaml  try-hylogen.cabal  webpack.config.js
client/: .gitignore  .psci  bower.json  package.json  webpack.config.js
client/src/: App.purs  Input.purs  Layout.purs  Main.purs
client/src/TryHylogen/: Program.jsx  Program.purs
client/static/: app.css  custom.css
client/support/: index.js
server/: README.md
server/src/: Compile.hs
server/test/: Test.hs
src/: Compile.hs  Main.hs  Main.purs  TryHylogen.purs
src/TryHylogen/: App.purs  Program.js
static/: app.css
